--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
-}
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
@@ -28,14 +15,9 @@
 }
 
 .App-header {
-  background-color: #031536;
+  background-image: linear-gradient(rgb(7, 0, 20), rgba(130, 94, 197, 0.603));
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -54,30 +36,3 @@
 
 
 
-
-.myClass {
-  height: 30vmin;
-  width: 30vw;
-  pointer-events: none;
-  margin-bottom: 10px;
-  margin-top: 100px;
-  border-radius: 200vw;
-}
-
-.title {
-  font-style: italic;
-  color: rgb(215, 94, 226);
-  border-bottom: 1px solid white;
-  font-weight: 600;
-}
-
-.logo {
-  margin-top: -190px;
-  margin-right:1750px;
-  margin-left: 50px;
-}
-
-.details-list-container {
-  list-style-type: none;
-  line-height: 50px;
-}
