--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -1,59 +1,34 @@
-
-  
-.title {
-    font-style: italic;
-    color: rgb(215, 94, 226);
-    border-bottom: 1px solid white;
-    font-weight: 600;
+.landing-wrapper {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgb(8, 0, 8), #e46bc9);
 }
 
-.logo {
-    margin-top: -190px;
-    margin-right:1750px;
-    margin-left: 50px;
+.copy-link-wrapper {
+    background-color: #2b0823;
+    display: inline-flex;
+    padding: 8px 5px 5px 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    user-select: none;
 }
 
-.details-list-container {
-    list-style-type: none;
+.copy-link-wrapper h1 {
+    padding: 0 10px 0 4px;
+    margin: 0;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    color: white;
+    display: inline-block;
+    border-right: 1px solid white;
 }
 
-.copyLink {
-    width: 500px;
-    background-color: rgb(0, 0, 0);
+.copy-link-wrapper img {
+    padding: 0 0 0 10px;
+    margin: 0 5px 5px 0;
+    object-fit: cover;
+    width: auto;
+    height: 20px;
     display: inline-block;
 }
-
-.copyLink h1 {
-    color: white;
-    z-index: 99;
-}
-
-.copyLink img {
-    object-fit: cover;
-    height: 20px;
-    width: auto;
-}
-
-.ip {
-    color: white;
-}
-
-.App-header {
-    background-image: linear-gradient(rgb(7, 0, 20), rgba(130, 94, 197, 0.603));
-    min-height: 100vh;
-}
-
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
-}
-
