--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -1,7 +1,9 @@
 .landing-wrapper {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgb(8, 0, 8), #e46bc9);
+    background-image: linear-gradient(rgb(20, 0, 20), rgb(228, 107, 201, .5)), url(../../images/code.jpg);
+    background-size: 100%;
+    user-select: none;
 }
 
 .copy-link-wrapper {
@@ -11,6 +13,11 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     user-select: none;
+}
+
+.copy-link-wrapper:hover {
+    transform: scale(1.1);
+    transition: all ease 500ms;
 }
 
 .copy-link-wrapper h1 {
@@ -31,4 +38,48 @@
     width: auto;
     height: 20px;
     display: inline-block;
+}
+
+.landing-wrapper h2 {
+    background-color: rgb(168, 224, 168);
+    color: rgba(0, 0, 190, 0.74);
+    margin: 0;
+    padding: 2px 0 2px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    width: 80px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.welcome-container {
+    display: inline-block;
+    width: auto;
+    margin: 0;
+}
+
+.typeWrite {
+    float: left;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80px;
+    margin-top: 13px;
+}
+
+.welcomeTo {
+    font-size: 120px;
+    color: white;
+    margin-top: 20vh;
+}
+
+.ideas {
+    float: right;
+    color: white;
+    font-size: 80px;
+    margin: 0;
+}
+
+.terminal {
+    width: 20%;
+    height: auto;
 }
