--- a/src/components/styles/Navigation.scss
+++ b/src/components/styles/Navigation.scss
@@ -9,6 +9,7 @@
 .topnav {
     display: inline-block;
     width: 65%;
+    margin-right: 1vw;
   }
   
 .topnav a {
@@ -16,94 +17,89 @@
     margin-top: 10px;
 }
 
-.topnav h1 {
-    float: left;
+.nav-highlight {
+  color: rgb(148, 113, 0);
+  border-bottom: 1px solid rgb(148, 113, 0);
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  margin-right: 30px;
+  padding: 15px 0 15px 0;
+  font-size: 15px;
+  width: 100px;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+}
+
+.nav-hightlight:hover {
     color: white;
-    margin-top: 10px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.dropdown-toggle.nav-flat {
+  background-color: rgba(0, 255, 255, 0.082);  
+}
+
+.dropdown-menu.show {
+  background-color: #1d1d1d;
+
+}
+
+a.dropdown-item:hover{
+  background-color: #575757;
+}
+
+.Typewriter{
+  color: white;
+}
+
+
+
+
+
+.learn-item {
+  background-color: #1d1d1d;
+  color: white;
+  text-align: left;
+  float: left;
+  align-items: left;
+  align-content: left;
+}
+
+  .nav-flat {
+    color: white;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    font-size: 40px;
-}
-
-.parent-nav-btns-wrapper {
-    list-style-type: none;
-    margin-top: 10px;
-}
-
-.parent-nav-btns-wrapper button{
+    margin-right: 20px;
     padding: 15px 0 15px 0;
-    border: none;
-    background-color: rgb(29, 29, 29);
-    color: white;
     font-size: 15px;
     width: 100px;
     font-family: 'Montserrat', sans-serif;
-}
-
-#highelight button:hover {
-    color: rgb(29, 29, 29);
-}
-
-.parent-nav-btns-wrapper button:hover {
-    background-color: rgb(255, 255, 255);
-    color: rgb(29, 29, 29);
-    transition: background .5s;
-    cursor: pointer;
-}
-
-.parent-nav-btns-wrapper #highlight button {
-    color: rgb(148, 113, 0);
-    border-bottom: 1px solid rgb(148, 113, 0);
-    font-weight: bold;
-}
-
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
-  }
-  
-  .copyLink {
-      margin-left: 45%;
-      width: 40px;
+    text-decoration: none;
   }
 
-  .copyLink h1 {
-      font-size: 20px;
+  .nav-flat:hover {
+    text-decoration: none;
+    color: rgb(236, 78, 236);
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  #basic-nav-dropdown {
+    margin-right: 10px;
+  }
 
   .container {
-    transform: translate(-10%, -50%);
+    transform: translate(0%, 0%);
   }
   
   .glitch {
-    color: rgb(223, 191, 191);
+    margin: 10px 10vw 0 10vw;
+    color: rgb(255, 255, 255);
     position: relative;
-    font-size: 9vw;
+    font-size: 40px;
     // margin: 70px 200px;
     animation: glitch 5s 5s infinite;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
   }
   
   .glitch::before {
