--- a/src/components/styles/Projects.scss
+++ b/src/components/styles/Projects.scss
@@ -126,53 +126,8 @@
     height: 320px;
 }
 
-
-
-
-
-
-
-
-.icons-wrapper {
-    margin-top: 100px;
-    width: 100%;
-    height: 300px;
-    background-color: white;
+.carousel-item-width {
+    object-fit: cover;
+    max-width: 300px;
+    height: auto;
 }
-
-
-
-
-
-.carouselWrapper {
-    position: relative;
-  }
-  
-  .carouselContainer {
-    display: flex;
-    flex-wrap: nowrap;
-    scroll-behavior: smooth;
-    overflow-x: auto;
-    scrollbar-width: 0;
-    scrollbar-color: transparent transparent;
-    -ms-scroll-snap-type: x mandatory;
-    scroll-snap-type: x mandatory;
-  
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  
-    .carouselItem {
-      flex-grow: 0;
-      flex-shrink: 0;
-      width: 25%;
-      scroll-snap-align: center;
-    }
-
-    .carouselItem img {
-        height: 200px;
-        width: 200px;
-        object-fit: cover;
-    }
-  }
-  
