--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -1,7 +1,7 @@
 .landing-wrapper {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgb(20, 0, 20), rgb(228, 107, 201, .5)), url(../../images/code.jpg);
+    background-image: linear-gradient(rgba(5, 14, 44, 0.74), rgba(68, 184, 219, 0.5)), url(../../images/code.jpg);
     background-size: 100%;
     user-select: none;
 }
@@ -41,15 +41,22 @@
 }
 
 .landing-wrapper h2 {
-    background-color: rgb(168, 224, 168);
-    color: rgba(0, 0, 190, 0.74);
+    background-color: rgba(54, 54, 54, 0.808);
+    color: white;
     margin: 0;
     padding: 2px 0 2px 0;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     width: 80px;
     margin-left: auto;
     margin-right: auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-weight: bold;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 .welcome-container {
