--- a/src/components/styles/Navigation.scss
+++ b/src/components/styles/Navigation.scss
@@ -1,9 +1,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
+
 .navWrapper {
     height: 90px;
     width: 100%;
-    background-color: #1d1d1d;
+    background-color: #01070a;
     user-select: none;
 }
 .topnav {
