--- a/src/components/styles/Courses.scss
+++ b/src/components/styles/Courses.scss
@@ -1,28 +1,34 @@
 @import '~bootstrap/scss/bootstrap.scss';
-
+html {
+    scroll-behavior: smooth;
+  }
 .courses-wrapper {
     width: 100%;
-    background-color: rgb(226, 226, 226);
+    background-color: white;
 }
 
 .courses-title {
     padding: 30px 0 20px 0;
     font-size: 80px;
     width: 100%;
-    border-bottom: 1px dashed rgb(56, 56, 56);
 }
 
 .course-block {
-    display: inline-block;
-    width: 40%;
+    flex: none;
+    float: left;
+    margin: 20px 0 0 2.5%;
+    width: 30%;
     height: 300px;
-    margin: 2.75% 5% 2.75% 5%;
     border: 1px solid rgb(221, 17, 95);
     background-color: white;
 }
 
 .course-block h1 {
     padding: 50px 0 0 0;
+}
+
+.course-block h3 {
+    margin: auto 1px auto 1px;
 }
 
 .course-block button {
